--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "deepl-node": "^1.19.0",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0"
   }
 }
